tests/machine/x/cpp/group_by_multi_join.error
line 25: ../../../tests/machine/x/cpp/group_by_multi_join.cpp:25:13: error: ‘ps’ was not declared in this scope
   25 |   decltype((ps.cost * ps.qty)) value;
      |             ^~
../../../tests/machine/x/cpp/group_by_multi_join.cpp:25:23: error: ‘ps’ was not declared in this scope
   25 |   decltype((ps.cost * ps.qty)) value;
      |                       ^~
../../../tests/machine/x/cpp/group_by_multi_join.cpp:25:13: error: ‘ps’ was not declared in this scope
   25 |   decltype((ps.cost * ps.qty)) value;
      |             ^~
../../../tests/machine/x/cpp/group_by_multi_join.cpp:25:23: error: ‘ps’ was not declared in this scope
   25 |   decltype((ps.cost * ps.qty)) value;
      |                       ^~
../../../tests/machine/x/cpp/group_by_multi_join.cpp: In lambda function:
../../../tests/machine/x/cpp/group_by_multi_join.cpp:84:13: warning: narrowing conversion of ‘<lambda closure object>main()::<lambda()>::<lambda(auto:1)>().main()::<lambda()>::<lambda(auto:1)>(main()::<lambda()>::<lambda()>())’ from ‘int’ to ‘bool’ [-Wnarrowing]
   82 |           g.key, ([&](auto v) {
      |                  ~~~~~~~~~~~~~~
   83 |             return std::accumulate(v.begin(), v.end(), 0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   84 |           })(([&]() {
      |           ~~^~~~~~~~~
   85 |             std::vector<decltype(std::declval<__struct4>().value)> __items;
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   86 |             for (auto r : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
   87 |               __items.push_back(r.value);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~
   88 |             }
      |             ~
   89 |             return __items;
      |             ~~~~~~~~~~~~~~~
   90 |           })())});
      |           ~~~~~

 24 |   decltype(std::declval<__struct3>().part) part;
 25 |   decltype((ps.cost * ps.qty)) value;
 26 | };
